--- a/package.json
+++ b/package.json
@@ -1,10 +1,20 @@
 {
-  "name": "react",
-  "version": "0.0.0",
-  "private": true,
+  "name": "semantic-ui-practice",
+  "version": "1.0.0",
+  "description": "",
+  "keywords": [],
+  "main": "src/index.js",
   "dependencies": {
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0"
+    "react": "17.0.0",
+    "react-dom": "17.0.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^4.0.1",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.2",
+    "typescript": "^4.1.3"
+  },
+  "devDependencies": {
+    "typescript": "3.8.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -12,7 +22,10 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "devDependencies": {
-    "react-scripts": "latest"
-  }
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
